Disable preview, vector modules